Fixed image width to not overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,3 +18,6 @@
 .vidInfo .download{
  margin-top:5px;
 }
+#ymp3cclogo{
+  max-width: 100%;
+}
